--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ micronaut:
     name: micronaut-bugreport-bigdecimal
 
 jackson:
-  serialization-inclusion: "USE-DEFAULTS"
+  serialization-inclusion: "USE_DEFAULTS"
   generator:
     WRITE_BIGDECIMAL_AS_PLAIN: true
   deserialization:
